tests/paczka1/fuzzy1/25508368.err
Error in line 5: c71eIrQXyJ A699 46,4
Error in line 6: c71eIrQXyJ S672 84,3
Error in line 3: xQ60 S735 24,8
Error in line 16: rnXBq A699 23,6
Error in line 25: KPq2U7plw S672 17,10
Error in line 22: rnXBq S672 9,7
Error in line 35: c71eIrQyJ A41 16,3
Error in line 26: c71eIrQXyJ A41 95,8
